--- a/styles/style.css
+++ b/styles/style.css
@@ -1,20 +1,73 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
 
-*,
-*::after,
-*::before {
+:root{
+  --white-color: #fff;
+  --dark-color: #1c2042;
+}
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
 html {
-  font-size: 16px;
+  font-size: 15px;
 }
 
 body {
   font-family: 'Poppins', sans-serif;
-  padding: 0;
-  margin: 0;
-  background-color: #f4f4f4;
+  background: var(--dark-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  color: var(--white-color);
+}
+.conatiner{
+  display: flex;
+  padding: 1rem;
+  margin: 0 auto;
+  max-width: 100%;
+  width: 50rem;
+}
+aside{
+  padding: 0.5rem 1rem;
+  width: 16rem;
+  border-right: 1px solid var(--white-color);
+
+}
+button{
+  background-color: var(--white-color);
+  color: var(--dark-color);
+  padding: 0.5rem 1rem;
+  bottom: 1px solid var(--white-color);
+  border-radius: 10px;
+  display: block;
+  margin: 1rem 0;
+  width: 100%;
+  font-size: 1.2rem;
+  font-weight: 700;
+  transform: all 0.2s ease;
+}
+
+button:focus{
+  outline: none;
+}
+button:hover{
+  transform: translateY(5px);
+}
+button:active{
+  transform: scale(1.1);
+
+}
+main{
+  flex: 1;
+  padding: 0.5rem 1rem;
+
+}
+h2{
+  border-bottom: 1px solid var(--white-color);
+  padding: 0.5rem;
+  display: flex;
+  justify-content: space-between;
 }
